--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,8 +2,18 @@
     <string name="app_name">Simon</string>
     <string name="howto">SIMON will give the first signal. Repeat the signal by pressing the same lens. SIMON will duplicate the first signal and will add one.
 Repeat these two signals by pressing the same lenses. SIMON will duplicate these first two signals and add one.Continue in this manner as long as you can repeat each se-quence of signals correctly.
-Notice that after the 5th, 9th and 13th signals in a sequence, SIMON automatically increases the tempo. If you fail to repeat a sequence exactly or if you take more than 5 seconds to repeat a signal, SIMON responds with a
-"RAZZ" sound; you have lost, and this sequence of signals is over.  </string>
+ If you fail to repeat a sequence exactly or if you take more than 5 seconds to repeat a signal, SIMON responds with a
+"RAZZ" sound; you have lost, and this sequence of signals is over.
+
+        \n\n
+
+        In reverse mode, SIMON will do the same as in normal mode, however, the player must enter the sequence in reverse order, from last to first.
+
+        \n\n
+
+        In turbo mode, the game is played the same as normal mode except at a much faster pace, and instead of have 5 seconds to repeat a signal, you only have 1 second.
+
+    </string>
     <string name="about">Michael Cha\nBradley Wilcox\n\nImages were created using Adobe Photoshop\n\n
                         Sounds were provided by soundbible.com</string>
 </resources>
